--- a/SOURCE/Empirical_Law_Estimator.ipynb
+++ b/SOURCE/Empirical_Law_Estimator.ipynb
@@ -411,7 +411,175 @@
       "202-th Simulated\n",
       "203-th Simulated\n",
       "204-th Simulated\n",
-      "205-th Simulated\n"
+      "205-th Simulated\n",
+      "206-th Simulated\n",
+      "207-th Simulated\n",
+      "208-th Simulated\n",
+      "209-th Simulated\n",
+      "210-th Simulated\n",
+      "211-th Simulated\n",
+      "212-th Simulated\n",
+      "213-th Simulated\n",
+      "214-th Simulated\n",
+      "215-th Simulated\n",
+      "216-th Simulated\n",
+      "217-th Simulated\n",
+      "218-th Simulated\n",
+      "219-th Simulated\n",
+      "220-th Simulated\n",
+      "221-th Simulated\n",
+      "222-th Simulated\n",
+      "223-th Simulated\n",
+      "224-th Simulated\n",
+      "225-th Simulated\n",
+      "226-th Simulated\n",
+      "227-th Simulated\n",
+      "228-th Simulated\n",
+      "229-th Simulated\n",
+      "230-th Simulated\n",
+      "231-th Simulated\n",
+      "232-th Simulated\n",
+      "233-th Simulated\n",
+      "234-th Simulated\n",
+      "235-th Simulated\n",
+      "236-th Simulated\n",
+      "237-th Simulated\n",
+      "238-th Simulated\n",
+      "239-th Simulated\n",
+      "240-th Simulated\n",
+      "241-th Simulated\n",
+      "242-th Simulated\n",
+      "243-th Simulated\n",
+      "244-th Simulated\n",
+      "245-th Simulated\n",
+      "246-th Simulated\n",
+      "247-th Simulated\n",
+      "248-th Simulated\n",
+      "249-th Simulated\n",
+      "250-th Simulated\n",
+      "251-th Simulated\n",
+      "252-th Simulated\n",
+      "253-th Simulated\n",
+      "254-th Simulated\n",
+      "255-th Simulated\n",
+      "256-th Simulated\n",
+      "257-th Simulated\n",
+      "258-th Simulated\n",
+      "259-th Simulated\n",
+      "260-th Simulated\n",
+      "261-th Simulated\n",
+      "262-th Simulated\n",
+      "263-th Simulated\n",
+      "264-th Simulated\n",
+      "265-th Simulated\n",
+      "266-th Simulated\n",
+      "267-th Simulated\n",
+      "268-th Simulated\n",
+      "269-th Simulated\n",
+      "270-th Simulated\n",
+      "271-th Simulated\n",
+      "272-th Simulated\n",
+      "273-th Simulated\n",
+      "274-th Simulated\n",
+      "275-th Simulated\n",
+      "276-th Simulated\n",
+      "277-th Simulated\n",
+      "278-th Simulated\n",
+      "279-th Simulated\n",
+      "280-th Simulated\n",
+      "281-th Simulated\n",
+      "282-th Simulated\n",
+      "283-th Simulated\n",
+      "284-th Simulated\n",
+      "285-th Simulated\n",
+      "286-th Simulated\n",
+      "287-th Simulated\n",
+      "288-th Simulated\n",
+      "289-th Simulated\n",
+      "290-th Simulated\n",
+      "291-th Simulated\n",
+      "292-th Simulated\n",
+      "293-th Simulated\n",
+      "294-th Simulated\n",
+      "295-th Simulated\n",
+      "296-th Simulated\n",
+      "297-th Simulated\n",
+      "298-th Simulated\n",
+      "299-th Simulated\n",
+      "300-th Simulated\n",
+      "301-th Simulated\n",
+      "302-th Simulated\n",
+      "303-th Simulated\n",
+      "304-th Simulated\n",
+      "305-th Simulated\n",
+      "306-th Simulated\n",
+      "307-th Simulated\n",
+      "308-th Simulated\n",
+      "309-th Simulated\n",
+      "310-th Simulated\n",
+      "311-th Simulated\n",
+      "312-th Simulated\n",
+      "313-th Simulated\n",
+      "314-th Simulated\n",
+      "315-th Simulated\n",
+      "316-th Simulated\n",
+      "317-th Simulated\n",
+      "318-th Simulated\n",
+      "319-th Simulated\n",
+      "320-th Simulated\n",
+      "321-th Simulated\n",
+      "322-th Simulated\n",
+      "323-th Simulated\n",
+      "324-th Simulated\n",
+      "325-th Simulated\n",
+      "326-th Simulated\n",
+      "327-th Simulated\n",
+      "328-th Simulated\n",
+      "329-th Simulated\n",
+      "330-th Simulated\n",
+      "331-th Simulated\n",
+      "332-th Simulated\n",
+      "333-th Simulated\n",
+      "334-th Simulated\n",
+      "335-th Simulated\n",
+      "336-th Simulated\n",
+      "337-th Simulated\n",
+      "338-th Simulated\n",
+      "339-th Simulated\n",
+      "340-th Simulated\n",
+      "341-th Simulated\n",
+      "342-th Simulated\n",
+      "343-th Simulated\n",
+      "344-th Simulated\n",
+      "345-th Simulated\n",
+      "346-th Simulated\n",
+      "347-th Simulated\n",
+      "348-th Simulated\n",
+      "349-th Simulated\n",
+      "350-th Simulated\n",
+      "351-th Simulated\n",
+      "352-th Simulated\n",
+      "353-th Simulated\n",
+      "354-th Simulated\n",
+      "355-th Simulated\n",
+      "356-th Simulated\n",
+      "357-th Simulated\n",
+      "358-th Simulated\n",
+      "359-th Simulated\n",
+      "360-th Simulated\n",
+      "361-th Simulated\n",
+      "362-th Simulated\n",
+      "363-th Simulated\n",
+      "364-th Simulated\n",
+      "365-th Simulated\n",
+      "366-th Simulated\n",
+      "367-th Simulated\n",
+      "368-th Simulated\n",
+      "369-th Simulated\n",
+      "370-th Simulated\n",
+      "371-th Simulated\n",
+      "372-th Simulated\n",
+      "373-th Simulated\n"
      ]
     }
    ],
@@ -520,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edb22f6",
+   "id": "ed2eda8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a2f7e4a",
+   "id": "18d5f7ee",
    "metadata": {},
    "source": [
     "### NORMAL EQUATIONS\n",
@@ -632,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4f14fc",
+   "id": "55afbc8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60457e77",
+   "id": "9e93499d",
    "metadata": {},
    "source": [
     "Clearly the best rule of thumb is given by the simple relation with W. We could then check if regularization would say the same we will compute GD with an L1+L2 regularization appart from the MSE objective function.\n"
@@ -688,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7dc296",
+   "id": "7213e46e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ff5570",
+   "id": "52550a07",
    "metadata": {},
    "source": [
     "### (b.1) Obtain $R_0$ from $D$ and estimated $w_0$ with the other rule of thumb"
@@ -706,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31760768",
+   "id": "00d27662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408cf8c2",
+   "id": "05f8ac9e",
    "metadata": {},
    "source": [
     "### (b.2) Obtain $R_0$ from $D$ and $W$"
@@ -762,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0996ce60",
+   "id": "1087e1c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c273baf1",
+   "id": "fc4f3ea9",
    "metadata": {},
    "outputs": [],
    "source": [
