--- a/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Grid_simulator_for_Simulation_Fitting_Algorithms.ipynb
+++ b/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Grid_simulator_for_Simulation_Fitting_Algorithms.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3a76df6f",
    "metadata": {},
    "source": [
     "# Grid simulator for Simulation Fitting Algorithms"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a0a1984a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "78750e06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f1049076",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "5e2d8ff9",
    "metadata": {
     "scrolled": true
    },
@@ -3153,12 +3158,12 @@
     "                \n",
     "                # save the image\n",
     "                rel_path=f\"{image_directory}/{ID}.png\"\n",
-    "                t=time()\n",
+    "                #t=time()\n",
     "                cv2.imwrite( rel_path, image)\n",
-    "                print(f\"Saved {i} in {time()-t} s size {os.path.getsize(rel_path)}\")\n",
-    "                t=time()\n",
-    "                im=cv2.imread(rel_path, cv2.IMREAD_ANYDEPTH)\n",
-    "                print(f\"Loaded {i} in {time()-t} s\")\n",
+    "                #print(f\"Saved {i} in {time()-t} s size {os.path.getsize(rel_path)}\")\n",
+    "                #t=time()\n",
+    "                #im=cv2.imread(rel_path, cv2.IMREAD_ANYDEPTH)\n",
+    "                #print(f\"Loaded {i} in {time()-t} s\")\n",
     "\n",
     "                if image is None:\n",
     "                    raise ValueError\n",
@@ -3183,6 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "166dd0f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3204,7 +3210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
