--- a/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Grid_simulator_for_Simulation_Fitting_Algorithms.ipynb
+++ b/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Grid_simulator_for_Simulation_Fitting_Algorithms.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a76df6f",
    "metadata": {},
    "source": [
     "# Grid simulator for Simulation Fitting Algorithms"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a0a1984a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +18,7 @@
     "from SOURCE.CLASS_CODE_GPU_Classes import *\n",
     "from SOURCE.CLASS_CODE_Image_Manager import *\n",
     "from SOURCE.CLASS_CODE_Polarization_Obtention_Algorithms import Gradient_Algorithm\n",
-    "import numpy as np\n",
+    "import numpy as n/home/melanie/Desktop/Conical_Refraction_Polarimeter/OUTPUTp\n",
     "import json\n",
     "import cv2\n",
     "import pandas as pd\n",
@@ -32,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78750e06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1049076",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e2d8ff9",
    "metadata": {
     "scrolled": true
    },
@@ -3188,7 +3183,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "166dd0f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3196,7 +3190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3210,7 +3204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
