--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_Test_Image_Retrieval_from_D_Matrix.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_Test_Image_Retrieval_from_D_Matrix.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88597667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d27d3ad",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "47c93b3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15714cdc",
    "metadata": {},
    "source": [
     "# lzf"
@@ -142,7 +138,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "db271d70",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +184,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e5de15",
    "metadata": {},
    "source": [
     "# gzip"
@@ -198,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75714bc8",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +238,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c87c9d",
    "metadata": {},
    "source": [
     "# Dataset Class"
@@ -254,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "8cc67a7a",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +438,6 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "5313fe17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +460,6 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "1adb15c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,8 +474,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_batches=3\n",
+    "sampler = R0_w0_Z_Sampler( R0_weights, w0_weights, Z_weights, num_batches)\n",
+    "dataset = CR_Dataset(D_matrix_file_path=\"/home/melanie/Desktop/Conical_Refraction_Polarimeter/OUTPUT/Dataset_R0_70_w0_70_Z_4.h5\",\n",
+    "            ID_file_path =\"/home/melanie/Desktop/Conical_Refraction_Polarimeter/OUTPUT/STRUCTURE_Grid_R0_70_w0_70_Z_4.json\", \n",
+    "            device = device,\n",
+    "            X=302, generate_images_w_depth=8, random_seed=666, \n",
+    "            batch_size=5, num_batches_per_epoch=100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 208,
-   "id": "94e2caec",
    "metadata": {
     "scrolled": false
    },
@@ -517,7 +520,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f5a039",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +536,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793f8a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +549,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb4430c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -556,7 +556,6 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "cd4012d5",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +586,6 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "c2898547",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +609,6 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "cbf2812d",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +641,6 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "9bd5762b",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +715,6 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "54f2bcd7",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +735,6 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1cf89d88",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +757,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7c1de49d",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +779,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "dfea0098",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +799,6 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "6b3a0606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +808,6 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "05c104df",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +825,6 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6aa11510",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +834,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -859,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
