Artificial noisy image generator created and apparently operational!

--- a/LAB/DEEP_LEARNING/Encoder_Alone/NOTEBOOK_Encoder_Alone.ipynb
+++ b/LAB/DEEP_LEARNING/Encoder_Alone/NOTEBOOK_Encoder_Alone.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Encoder Alone CNN to get the $\\phi_{CR}, R_0, w_0, Z$ parameters of a CR image\n",
     "---\n",
+    "Quizás le falte un poco de recurrencia para evitar vanishing gradients!\n",
     "\n",
     "---"
    ]
