simple Variational Autoencoder operational and eager for training data!

--- a/LAB/DEEP_LEARNING/Encoder_Decoder_Intermediate_Supervision/NOTEBOOK_Autoencoder_with_Intermediate_Supervision.ipynb
+++ b/LAB/DEEP_LEARNING/Encoder_Decoder_Intermediate_Supervision/NOTEBOOK_Autoencoder_with_Intermediate_Supervision.ipynb
@@ -1118,6 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.eval()\n",
     "predictied_labels, predicted_images = model(torch.from_numpy(im).to(device))\n",
     "# normalize the predicted images and turn them to uint8\n",
     "predicted_images = (dataset.max_intensity*(predicted_images/predicted_images.amax(dim=(1,2), keepdim=True)[0].unsqueeze(1))).type(dataset.im_type)\n",
