--- a/LAB/DEEP_LEARNING/Variational_Autoencoder_Intermediate_Supervision/NOTEBOOK_Simple_Variational_Autoencoder_with_Intermediate_Supervision.ipynb
+++ b/LAB/DEEP_LEARNING/Variational_Autoencoder_Intermediate_Supervision/NOTEBOOK_Simple_Variational_Autoencoder_with_Intermediate_Supervision.ipynb
@@ -316,12 +316,12 @@
     "    for epoch in range(epochs):\n",
     "\n",
     "        train_loss = train_epoch(epoch, label_criterion, reconstruction_criterion, model, optimizer, sampler, dataset, print_loss_every_batches=print_loss_every_batches)\n",
+    "        display.clear_output(wait=True)\n",
+    "\n",
     "        val_loss = validate_epoch(label_criterion, reconstruction_criterion, model, sampler, dataset)\n",
     "        losses[\"train\"].append(train_loss)\n",
     "        losses[\"val\"].append(val_loss)\n",
     "        \n",
-    "        display.clear_output(wait=True)\n",
-    "\n",
     "        plt.plot(losses[\"train\"], label=\"log training loss\")\n",
     "        plt.plot(losses[\"val\"], label=\"log validation loss\")\n",
     "        plt.yscale('log')\n",
@@ -623,15 +623,9 @@
     "            self.open_hdf5()\n",
     "            self.phis = torch.from_numpy(self.h5f_D_matrices['phis'][:]).unsqueeze(0).to(self.device) #[1,Nx,Ny]\n",
     "\n",
-    "        try:\n",
-    "            D_mats = torch.from_numpy(self.h5f_D_matrices[\n",
+    "        D_mats = torch.from_numpy(self.h5f_D_matrices[\n",
     "                f\"R0_{self.R0s[R0_w0_Z_idxs[0]]}_w0_{self.w0s[R0_w0_Z_idxs[1]]}_Z_{self.Zs[R0_w0_Z_idxs[2]]}\"][:]\n",
-    "                                 ).unsqueeze(1).to(self.device) #[2, 1, Nx, Ny]\n",
-    "        except:\n",
-    "            D_mats = torch.from_numpy(self.h5f_D_matrices[\n",
-    "                f\"R0_100.28985507246377_w0_10.318840579710145_Z_0.0\"][:]\n",
-    "                                 ).unsqueeze(1).to(self.device) #[2, 1, Nx,Ny]\n",
-    "            \n",
+    "                                 ).unsqueeze(1).to(self.device) #[2, 1, Nx, Ny]            \n",
     "        \n",
     "        phiCRs = torch.FloatTensor(self.batch_size, 1, 1).uniform_(0, 2*np.pi).to(self.device) #[batch_size, 1, 1]\n",
     "        neat_images = D_mats[0]+D_mats[1]*torch.cos(phiCRs-self.phis) #[batch_size, Nx,Ny]\n",
@@ -686,8 +680,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID_file_path= \"/home/melanie/Desktop/Conical_Refraction_Polarimeter/OUTPUT/STRUCTURE_Grid_R0_70_w0_70_Z_4.json\"\n",
-    "D_matrix_file_path= \"/home/melanie/Desktop/Conical_Refraction_Polarimeter/OUTPUT/Dataset_R0_70_w0_70_Z_4.h5\"\n",
+    "ID_file_path= \"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/STRUCTURE_Grid_R0_70_w0_70_Z_4.json\"\n",
+    "D_matrix_file_path= \"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Variational_AutoEncoder/Dataset_R0_70_w0_70_Z_4.h5\"\n",
     "\n",
     "total_epochs = 20\n",
     "number_of_batches_per_epoch = 5\n",
@@ -818,6 +812,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise ValueError\n",
+    "%%time\n",
+    "for i in sampler:\n",
+    "    ims, labs = dataset[i]\n",
+    "    model(ims)\n",
+    "    print(f\"{i}-th batch\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -850,9 +858,9 @@
    "source": [
     "print(\"\\n\\n\\nFINAL VALIDATION! ####################################################\\n\\n\")\n",
     "print(\"Train Set\")\n",
-    "validate(criterion, thumb_model_w0, train_loader)\n",
+    "validate_epoch(label_criterion, reconstruction_criterion, model, sampler, dataset)\n",
     "print(\"Test Set\")\n",
-    "validate(criterion, thumb_model_w0, val_loader)"
+    "validate_epoch(label_criterion, reconstruction_criterion, model, sampler, dataset)"
    ]
   },
   {
@@ -1236,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
