Simple Encoder ready for Christmas food

--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,15 +602,17 @@
     "import cv2\n",
     "import json\n",
     "import h5py\n",
-    "output_directory=\"/home/oianguHippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\"\n",
-    "#output_directory=\"/home/oianguHippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
+    "from IPython import display\n",
+    "\n",
+    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\"\n",
+    "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
     "\n",
     "os.makedirs(output_directory, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,21 +688,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 23.5 s, sys: 591 ms, total: 24.1 s\n",
-      "Wall time: 6.2 s\n"
+      "Processed 500000/500000 images 100.0 %\n",
+      "CPU times: user 3h 41min 3s, sys: 5min 24s, total: 3h 46min 27s\n",
+      "Wall time: 55min 50s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "j=0\n",
+    "output_info_every=100\n",
     "ground_truths={'ID':[], 'phiCR':[]}\n",
     "for i in sampler:\n",
     "    imgs, labs = dataset[i]\n",
@@ -711,47 +715,10 @@
     "        ground_truths['ID'].append(j)\n",
     "        ground_truths['phiCR'].append(f\"{labs[k][-1]}\")\n",
     "        j+=1\n",
+    "        if j%output_info_every==0:\n",
+    "            display.clear_output(wait=True)\n",
+    "            print(f\"Processed {j}/{total_images_to_generate} images {j/total_images_to_generate*100} %\")\n",
     "json.dump(ground_truths, open( f\"{output_directory}/GROUND_TRUTHS.json\", \"w\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "40*500000/1000000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50.0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "6*500/60"
    ]
   },
   {
@@ -1034,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
