--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_3.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_3.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the Basic Grid for $w_0,R_0,Z$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -106,7 +113,7 @@
    "outputs": [],
    "source": [
     "TOTAL_WORKERS = 2\n",
-    "WORKER_ID = 1 # beginning from 0 till TOTAL_WORKERS-1\n",
+    "WORKER_ID = 0 # beginning from 0 till TOTAL_WORKERS-1\n",
     "\n",
     "def beg_index(N,j,K):\n",
     "    # N -> number of total elements in vector, j is worker id, K is total number of workers\n",
@@ -142,10 +149,10 @@
       "[####################################################################################################] 100.0% \n",
       "\n",
       "Simulated: 9801/9800\n",
-      "Elapsed time: 9.0 h 22.0 min -491.9 s\n",
+      "Elapsed time: 10.0 h 44.0 min -547.4 s\n",
       "\n",
       "\n",
-      "WORKER 1 FINISHED!!!\n"
+      "WORKER 0 FINISHED!!!\n"
      ]
     }
    ],
@@ -229,23 +236,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Not a file or file object (not a file or file object)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3125/2543997712.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mflush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    450\u001b[0m         \"\"\"\n\u001b[1;32m    451\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mphil\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 452\u001b[0;31m             \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mwith_phil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h5f.flush()\n",
     "h5f.close()"
@@ -260,11 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker 0 done!\n",
+      "Worker 1 done!\n"
+     ]
+    }
+   ],
    "source": [
-    "raise ValueError\n",
+    "#raise ValueError\n",
     "# Open the big h5f that will contain all of the parts\n",
     "h5f = h5py.File(f\"{image_directory}/Dataset_R0_{N_R0}_w0_{N_w0}_Z_{N_Z}.h5\", 'w') # append if exists, create if not\n",
     "total_phase = {'R0s':[], 'w0s':[], 'Zs':[], 'IDs':[]}\n",
@@ -284,13 +284,6 @@
     "json.dump(total_phase, open( f\"{output_directory}/STRUCTURE_Grid_R0_{N_R0}_w0_{N_w0}_Z_{N_Z}.json\", \"w\"))\n",
     "h5f.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -611,8 +604,8 @@
     "import h5py\n",
     "from IPython import display\n",
     "\n",
-    "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\"\n",
-    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
+    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TEST/\"\n",
+    "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
     "\n",
     "os.makedirs(output_directory, exist_ok=True)"
    ]
@@ -627,7 +620,7 @@
     "D_matrix_file_path= \"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Encoder_Alone/Dataset_R0_70_w0_70_Z_4.h5\"\n",
     "        \n",
     "\n",
-    "total_images_to_generate = 500000 # para el test set unos 100000 bien supongo\n",
+    "total_images_to_generate = 100000 # para el test set unos 100000 bien supongo\n",
     "\n",
     "batch_size = 10\n",
     "number_of_batches_per_epoch = int(total_images_to_generate/batch_size)\n",
@@ -636,9 +629,9 @@
     "\n",
     "X=302\n",
     "generate_images_w_depth=8\n",
-    "random_seed=666 # 669 aldatu seede para generar los validation set!!!\n",
+    "random_seed=669 # 669 aldatu seede para generar los validation set!!!\n",
     "\n",
-    "apply_noise=False # Genera otro dataset pair sin noise tb\n",
+    "apply_noise=True # Genera otro dataset pair sin noise tb\n",
     "all_stregths_random_per_epoch=True\n",
     "max_poisson_strength=0.5\n",
     "max_blob_strength=0.5\n",
@@ -702,9 +695,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 500000/500000 images 100.0 %\n",
-      "CPU times: user 24min 23s, sys: 1min 18s, total: 25min 42s\n",
-      "Wall time: 52min 51s\n"
+      "Processed 100000/100000 images 100.0 %\n",
+      "CPU times: user 51min 51s, sys: 1min 21s, total: 53min 12s\n",
+      "Wall time: 16min 43s\n"
      ]
     }
    ],
@@ -757,25 +750,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Tests"
+   ]
   },
   {
    "cell_type": "code",
