--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_4.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_4.ipynb
@@ -612,7 +612,7 @@
     "from IPython import display\n",
     "\n",
     "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\"\n",
-    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
+    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST/\"\n",
     "\n",
     "os.makedirs(output_directory, exist_ok=True)"
    ]
@@ -627,7 +627,7 @@
     "D_matrix_file_path= \"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Encoder_Alone/Dataset_R0_70_w0_70_Z_4.h5\"\n",
     "        \n",
     "\n",
-    "total_images_to_generate = 500000 # para el test set unos 100000 bien supongo\n",
+    "total_images_to_generate = 100000 # para el test set unos 100000 bien supongo\n",
     "\n",
     "batch_size = 10\n",
     "number_of_batches_per_epoch = int(total_images_to_generate/batch_size)\n",
@@ -636,7 +636,7 @@
     "\n",
     "X=302\n",
     "generate_images_w_depth=8\n",
-    "random_seed=666 # 669 aldatu seede para generar los validation set!!!\n",
+    "random_seed=669 # 669 aldatu seede para generar los validation set!!!\n",
     "\n",
     "apply_noise=False # Genera otro dataset pair sin noise tb\n",
     "all_stregths_random_per_epoch=True\n",
@@ -702,9 +702,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 500000/500000 images 100.0 %\n",
-      "CPU times: user 24min 23s, sys: 1min 18s, total: 25min 42s\n",
-      "Wall time: 52min 51s\n"
+      "Processed 100000/100000 images 100.0 %\n",
+      "CPU times: user 5min 32s, sys: 17.4 s, total: 5min 50s\n",
+      "Wall time: 16min 6s\n"
      ]
     }
    ],
