Noisy and non-noisy simple encoder trainers ready for battle at Aitor's home

--- a/LAB/DEEP_LEARNING/Encoder_Alone/NOTEBOOK_Encoder_Alone.ipynb
+++ b/LAB/DEEP_LEARNING/Encoder_Alone/NOTEBOOK_Encoder_Alone.ipynb
@@ -1195,9 +1195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'im' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_96882/1984075064.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mimage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0msaturation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mpol_or_CR\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"pol\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'im' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir(f\"../../..\")\n",
@@ -1312,6 +1324,25 @@
     "to_result_dict( individual_image_results, rotation_algorithm, \"Mirror\", \"Fibonacci\", image_names)\n",
     "\n",
     "# GRADIENT #######\n",
+    "def compute_intensity_gravity_center(image):\n",
+    "    \"\"\"\n",
+    "        Expects input image to be an array of dimensions [h, w].\n",
+    "        It will return an array of gravity centers [2(h,w)] in pixel coordinates\n",
+    "        Remember that pixel coordinates are set equal to numpy indices\n",
+    "\n",
+    "    \"\"\"\n",
+    "    # image wise total intensity and marginalized inensities for weighted sum\n",
+    "    intensity_in_w = np.sum(image, axis=0) # weights for x [raw_width]\n",
+    "    intensity_in_h = np.sum(image, axis=1) # weights for y [raw_height]\n",
+    "    total_intensity = intensity_in_h.sum()\n",
+    "\n",
+    "    # Compute mass center for intensity\n",
+    "    # [2] (h_center,w_center)\n",
+    "    return np.nan_to_num( np.stack(\n",
+    "        (np.dot(intensity_in_h, np.arange(image.shape[0]))/total_intensity,\n",
+    "         np.dot(intensity_in_w, np.arange(image.shape[1]))/total_intensity)\n",
+    "        ) )\n",
+    "\n",
     "optimal_masked_gravs={}\n",
     "optimal_radii={}\n",
     "grav=compute_intensity_gravity_center(image)\n",
