--- a/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
+++ b/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
@@ -1247,7 +1247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1261,7 +1261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
