--- a/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
+++ b/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -2246,12 +2246,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positivo-Ref deberian ser 13.85 deg son 9.017048402616169 deg\n",
-      "Negativo-Ref deberian ser 9.45 deg son 12.373855007019301 deg\n",
+      "Positivo-Ref deberian ser 9.45 deg son 9.017048402616169 deg\n",
+      "Negativo-Ref deberian ser 13.85 deg son 12.373855007019301 deg\n",
       "Ambos-Ref deberian ser 4.4 deg son 6.5031358068904455 deg\n",
       "\n",
-      "Positivo-Ref2 deberian ser 13.85 deg son 8.253440083597914 deg\n",
-      "Negativo-Ref2 deberian ser 9.45 deg son 13.137463326037556 deg\n",
+      "Positivo-Ref2 deberian ser 9.45 deg son 8.253440083597914 deg\n",
+      "Negativo-Ref2 deberian ser 13.85 deg son 13.137463326037556 deg\n",
       "Ambos-Ref2 deberian ser 4.4 deg son 5.73952748787219 deg\n",
       "\n",
       "Ref2-Ref deberian ser 1 deg son -0.7636083190182555 deg\n",
@@ -2261,12 +2261,12 @@
     }
    ],
    "source": [
-    "print(f\"Positivo-Ref deberian ser {13.85} deg son {-(pos-ref)*180/np.pi/2} deg\")\n",
-    "print(f\"Negativo-Ref deberian ser {9.45} deg son {(neg-ref)*180/np.pi/2} deg\")\n",
+    "print(f\"Positivo-Ref deberian ser {9.45} deg son {-(pos-ref)*180/np.pi/2} deg\")\n",
+    "print(f\"Negativo-Ref deberian ser {13.85} deg son {(neg-ref)*180/np.pi/2} deg\")\n",
     "print(f\"Ambos-Ref deberian ser {4.4} deg son {-(both-ref)*180/np.pi/2} deg\\n\")\n",
     "\n",
-    "print(f\"Positivo-Ref2 deberian ser {13.85} deg son {-(pos-ref2)*180/np.pi/2} deg\")\n",
-    "print(f\"Negativo-Ref2 deberian ser {9.45} deg son {(neg-ref2)*180/np.pi/2} deg\")\n",
+    "print(f\"Positivo-Ref2 deberian ser {9.45} deg son {-(pos-ref2)*180/np.pi/2} deg\")\n",
+    "print(f\"Negativo-Ref2 deberian ser {13.85} deg son {(neg-ref2)*180/np.pi/2} deg\")\n",
     "print(f\"Ambos-Ref2 deberian ser {4.4} deg son {-(both-ref2)*180/np.pi/2} deg\\n\")\n",
     "\n",
     "print(f\"Ref2-Ref deberian ser {1} deg son {(ref2-ref)*180/np.pi/2} deg\\n\")\n",
@@ -2659,7 +2659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2673,7 +2673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
