Added ,many visualizations of the UMAP embedder to our case!

--- a/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder.ipynb
+++ b/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder.ipynb
@@ -576,7 +576,12 @@
       "Train Epoch: 17 [2000/500000 (0%)]\tLoss: 0.029676\n",
       "Train Epoch: 17 [3000/500000 (1%)]\tLoss: 0.042626\n",
       "Train Epoch: 18 [1000/500000 (0%)]\tLoss: 0.075514\n",
-      "Train Epoch: 18 [2000/500000 (0%)]\tLoss: 0.097089\n"
+      "Train Epoch: 18 [2000/500000 (0%)]\tLoss: 0.097089\n",
+      "Train Epoch: 18 [3000/500000 (1%)]\tLoss: 0.050735\n",
+      "Train Epoch: 19 [1000/500000 (0%)]\tLoss: 0.075806\n",
+      "Train Epoch: 19 [2000/500000 (0%)]\tLoss: 0.060774\n",
+      "Train Epoch: 19 [3000/500000 (1%)]\tLoss: 1.925540\n",
+      "Train Epoch: 20 [1000/500000 (0%)]\tLoss: 0.193059\n"
      ]
     }
    ],
