--- a/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
+++ b/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder_Non_Noisy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -628,14 +628,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#checkpoint = torch.load(f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Simple_Encoder/Model_opt_Adam_8sperbatchx10batchperepx20epochs_samples_feats_1={feats_1}_feats_2={feats_2}_feats_3={feats_3}_feats_4={feats_4}_prop1={prop1}_prop2={prop2}_prop3={prop3}_av_pool1_div={av_pool1_div}_conv4_feat_size={conv4_feat_size}_av_pool2_div={av_pool2_div}_out_fc_1={out_fc_1}_dropout_p1={dropout_p1}_dropout_p2={dropout_p2}.pt\")\n",
-    "checkpoint = torch.load(f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Simple_Encoder/Noisy_Model_and_Optimizer_2022-01-10 12:42:36.655051.pt\")\n",
+    "checkpoint = torch.load(f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Simple_Encoder/Noisy_Model_and_Optimizer_2022-01-18 11:37:26.485463.pt\")\n",
     "\n",
     "model = Simple_Encoder( X=X, feats_1=feats_1, feats_2=feats_2, feats_3=feats_3, feats_4=feats_4,\n",
     "                 prop1=prop1, prop2=prop2, prop3=prop3, av_pool1_div=av_pool1_div, conv4_feat_size=conv4_feat_size, av_pool2_div=av_pool2_div, \n",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1888,10 +1888,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR -0.6174699068069458 rad -35.378419636374254 deg\n",
+      "Predicted phi_CR -0.28759875893592834 rad -16.478195080229064 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -0.3087349534034729 rad -17.689209818187127 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.14379937946796417 rad -8.239097540114532 deg\n"
      ]
     }
    ],
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1941,10 +1941,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR -0.6441248655319214 rad -36.90563627441077 deg\n",
+      "Predicted phi_CR -0.31033265590667725 rad -17.780751428538224 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -0.3220624327659607 rad -18.452818137205384 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.15516632795333862 rad -8.890375714269112 deg\n"
      ]
     }
    ],
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1994,10 +1994,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR -0.9322242736816406 rad -53.41251644160659 deg\n",
+      "Predicted phi_CR -1.1239515542984009 rad -64.39768043846735 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -0.4661121368408203 rad -26.706258220803296 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.5619757771492004 rad -32.198840219233674 deg\n"
      ]
     }
    ],
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2048,10 +2048,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR -0.18554088473320007 rad -10.630709622335653 deg\n",
+      "Predicted phi_CR -0.2696119546890259 rad -15.447627109953569 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -0.09277044236660004 rad -5.315354811167826 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.13480597734451294 rad -7.723813554976784 deg\n"
      ]
     }
    ],
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2102,10 +2102,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR -0.8444721698760986 rad -48.38469125015515 deg\n",
+      "Predicted phi_CR -0.9380506277084351 rad -53.746341937290964 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -0.4222360849380493 rad -24.192345625077575 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.46902531385421753 rad -26.873170968645482 deg\n"
      ]
     }
    ],
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2156,10 +2156,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR 1.775797963142395 rad 101.74572855598736 deg\n",
+      "Predicted phi_CR 1.701987385749817 rad 97.5166939879689 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is 0.8878989815711975 rad 50.87286427799368 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is 0.8509936928749084 rad 48.75834699398445 deg\n"
      ]
     }
    ],
@@ -2183,14 +2183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ref Ort\n",
+      "Ort\n",
       "\n"
      ]
     },
@@ -2210,15 +2210,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted phi_CR 1.775797963142395 rad -115.37539153531532 deg\n",
+      "Predicted phi_CR 1.701987385749817 rad -106.23291695387562 deg\n",
       "\n",
       "\n",
-      "Predicted Polarization plane -relative to the image plane w axis- is -1.0068402290344238 rad -57.68769576765766 deg\n"
+      "Predicted Polarization plane -relative to the image plane w axis- is -0.9270570874214172 rad -53.11645847693781 deg\n"
      ]
     }
    ],
    "source": [
-    "print(\"Ref Ort\\n\")\n",
+    "print(\"Ort\\n\")\n",
     "%matplotlib inline\n",
     "\n",
     "image_full_path = \"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/LAB/EXPERIMENTAL/Fotos_Turpin/Day3/Problem/90__100.png\"\n",
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -2246,17 +2246,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positivo-Ref deberian ser 9.45 deg son 9.017048402616169 deg\n",
-      "Negativo-Ref deberian ser 13.85 deg son 12.373855007019301 deg\n",
-      "Ambos-Ref deberian ser 4.4 deg son 6.5031358068904455 deg\n",
+      "Positivo-Ref deberian ser 9.45 deg son 23.95974267911914 deg\n",
+      "Negativo-Ref deberian ser 13.85 deg son 0.5152839851377482 deg\n",
+      "Ambos-Ref deberian ser 4.4 deg son 18.63407342853095 deg\n",
       "\n",
-      "Positivo-Ref2 deberian ser 9.45 deg son 8.253440083597914 deg\n",
-      "Negativo-Ref2 deberian ser 13.85 deg son 13.137463326037556 deg\n",
-      "Ambos-Ref2 deberian ser 4.4 deg son 5.73952748787219 deg\n",
+      "Positivo-Ref2 deberian ser 9.45 deg son 23.308464504964565 deg\n",
+      "Negativo-Ref2 deberian ser 13.85 deg son 1.1665621592923279 deg\n",
+      "Ambos-Ref2 deberian ser 4.4 deg son 17.98279525437637 deg\n",
       "\n",
-      "Ref2-Ref deberian ser 1 deg son -0.7636083190182555 deg\n",
+      "Ref2-Ref deberian ser 1 deg son -0.6512781741545796 deg\n",
       "\n",
-      "El de noventa deberian ser 90 deg son 108.56056004565133 deg\n"
+      "El de noventa deberian ser 90 deg son 101.87480547092225 deg\n"
      ]
     }
    ],
