--- a/LAB/DEEP_LEARNING/Noise_Corrector/NOTEBOOK_Noise_Corrector.ipynb
+++ b/LAB/DEEP_LEARNING/Noise_Corrector/NOTEBOOK_Noise_Corrector.ipynb
@@ -513,11 +513,11 @@
     "\n",
     "        self.h5f = h5py.File(f\"{h5f_full_path}\", 'r')\n",
     "        self.num_batches = len(self.h5f)\n",
-    "        shape = self.h5f[ self.df_GTs[0]['h5_idx'] ].shape[0]\n",
+    "        shape = self.h5f[ self.df_GTs[0]['ID'] ].shape\n",
     "        self.batch_size = shape[0]//2\n",
     "        self.image_size = shape[1:]\n",
-    "        print(f\"There are {self.batch_size} images per batch\\nwith {self.feature_num} features per data\\nand {self.num_batches} batches in total\")\n",
-    "        print(f\"A total of {self.batch_size*self.num_batches} samples with their GTs.\")\n",
+    "        print(f\"There are {self.batch_size} images per batch\\nwith {self.image_size} size images\\nand {self.num_batches} batches in total\")\n",
+    "        print(f\"A total of {self.batch_size*self.num_batches} images with their GTs (denoised versions).\")\n",
     "\n",
     "    def __len__(self):\n",
     "        return self.num_batches\n",
@@ -570,7 +570,7 @@
     "save_model_every_epochs = 1\n",
     "torch.manual_seed(678)\n",
     "\n",
-    "exp_name='Noise_Corrector_Scratch_Network_'\n"
+    "exp_name='Noise_Corrector_Scratch_Network'\n"
    ]
   },
   {
@@ -598,9 +598,9 @@
    "source": [
     "X=302\n",
     "S0=2*X+1\n",
-    "S1=2*290+1\n",
-    "S2=2*250+1\n",
-    "S3=2*200+1\n",
+    "S1=2*250+1\n",
+    "S2=2*200+1\n",
+    "S3=2*150+1\n",
     "feats_S1=5\n",
     "feats_S2=5\n",
     "feats_S3=10\n",
@@ -1746,7 +1746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1760,7 +1760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
