Proximity metric generator definitively finished!

--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
@@ -1775,7 +1775,7 @@
     "import h5py\n",
     "from IPython import display\n",
     "\n",
-    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/Noisy_Non_Noisy_same_angle/TRAIN/\"\n",
+    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/Noisy_Non_Noisy_same_angle/TEST/\"\n",
     "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST/\"\n",
     "\n",
     "os.makedirs(output_directory, exist_ok=True)"
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1869,8 +1869,8 @@
      "output_type": "stream",
      "text": [
       "Processed 50000/10000 batches 500.0 %\n",
-      "CPU times: user 2h 54min 53s, sys: 3min 31s, total: 2h 58min 24s\n",
-      "Wall time: 33min 7s\n"
+      "CPU times: user 20min 54s, sys: 44.1 s, total: 21min 38s\n",
+      "Wall time: 3min 38s\n"
      ]
     }
    ],
@@ -1887,7 +1887,7 @@
     "try:\n",
     "    ground_truths = json.load( open(f\"{output_directory}/GROUND_TRUTHS_K={K}_Noisy_Non_Noisy_same_angle.json\") )\n",
     "except:\n",
-    "    ground_truths={'ID':[], 'phiCR':[]}\n",
+    "    ground_truths={'ID':[], 'R0':[], 'w0':[], 'Z':[], 'phiCR':[]}\n",
     "\n",
     "for i in sampler:\n",
     "    imgs, labs = dataset[i]\n",
@@ -1897,13 +1897,17 @@
     "        ID=f\"{batch+prev_batches}\"\n",
     "        h5f.create_dataset(ID, data=imgs[p], compression=\"lzf\", shuffle=True)\n",
     "        ground_truths['ID'].append(batch+prev_batches)\n",
-    "        ground_truths['phiCR'].append( f\"{labs[p]}\" )\n",
+    "        ground_truths['R0'].append( f\"{labs[p][0]}\" )\n",
+    "        ground_truths['w0'].append( f\"{labs[p][1]}\" )\n",
+    "        ground_truths['Z'].append( f\"{labs[p][2]}\" )\n",
+    "        ground_truths['phiCR'].append( f\"{labs[p][3]}\" )\n",
+    "\n",
     "        batch+=1\n",
     "    if batch%output_info_every==0:\n",
     "        h5f.flush()\n",
     "        display.clear_output(wait=True)\n",
     "        print(f\"Processed {batch}/{number_of_batches_per_epoch} batches {batch/number_of_batches_per_epoch*100} %\")\n",
-    "        json.dump(ground_truths, open( f\"{output_directory}/GROUND_TRUTHS.json\", \"w\"))\n",
+    "        json.dump(ground_truths, open( f\"{output_directory}/GROUND_TRUTHS_K={K}_Noisy_Non_Noisy_same_angle.json\", \"w\"))\n",
     "h5f.flush()"
    ]
   },
