--- a/LAB/DEEP_LEARNING/Noise_Corrector/NOTEBOOK_Noise_Corrector.ipynb
+++ b/LAB/DEEP_LEARNING/Noise_Corrector/NOTEBOOK_Noise_Corrector.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1617,8 +1617,59 @@
       "Train Epoch: 90 [40/200000 (0%)]\tLoss: 74.062469\n",
       "Train Epoch: 90 [60/200000 (0%)]\tLoss: 290.209137\n",
       "Train Epoch: 90 [80/200000 (0%)]\tLoss: 56.393276\n",
-      "Train Epoch: 90 [100/200000 (0%)]\tLoss: 45.401131\n"
+      "Train Epoch: 90 [100/200000 (0%)]\tLoss: 45.401131\n",
+      "Train Epoch: 90 [120/200000 (0%)]\tLoss: 98.360596\n",
+      "Train Epoch: 90 [140/200000 (0%)]\tLoss: 169.326508\n",
+      "Train Epoch: 90 [160/200000 (0%)]\tLoss: 68.633102\n",
+      "Train Epoch: 90 [180/200000 (0%)]\tLoss: 147.955811\n",
+      "Train Epoch: 90 [200/200000 (0%)]\tLoss: 405.098419\n",
+      "Train Epoch: 91 [20/200000 (0%)]\tLoss: 47.983528\n",
+      "Train Epoch: 91 [40/200000 (0%)]\tLoss: 462.342804\n",
+      "Train Epoch: 91 [60/200000 (0%)]\tLoss: 112.424973\n",
+      "Train Epoch: 91 [80/200000 (0%)]\tLoss: 42.139553\n",
+      "Train Epoch: 91 [100/200000 (0%)]\tLoss: 163.008865\n",
+      "Train Epoch: 91 [120/200000 (0%)]\tLoss: 264.930573\n",
+      "Train Epoch: 91 [140/200000 (0%)]\tLoss: 40.355278\n",
+      "Train Epoch: 91 [160/200000 (0%)]\tLoss: 92.183411\n",
+      "Train Epoch: 91 [180/200000 (0%)]\tLoss: 138.466141\n",
+      "Train Epoch: 91 [200/200000 (0%)]\tLoss: 87.867554\n",
+      "Train Epoch: 92 [20/200000 (0%)]\tLoss: 172.092697\n",
+      "Train Epoch: 92 [40/200000 (0%)]\tLoss: 38.002468\n",
+      "Train Epoch: 92 [60/200000 (0%)]\tLoss: 198.449615\n",
+      "Train Epoch: 92 [80/200000 (0%)]\tLoss: 45.129711\n",
+      "Train Epoch: 92 [100/200000 (0%)]\tLoss: 476.500977\n",
+      "Train Epoch: 92 [120/200000 (0%)]\tLoss: 461.941132\n",
+      "Train Epoch: 92 [140/200000 (0%)]\tLoss: 39.582897\n",
+      "Train Epoch: 92 [160/200000 (0%)]\tLoss: 107.361420\n",
+      "Train Epoch: 92 [180/200000 (0%)]\tLoss: 47.430714\n",
+      "Train Epoch: 92 [200/200000 (0%)]\tLoss: 404.232849\n",
+      "Train Epoch: 93 [20/200000 (0%)]\tLoss: 91.448463\n",
+      "Train Epoch: 93 [40/200000 (0%)]\tLoss: 103.315208\n",
+      "Train Epoch: 93 [60/200000 (0%)]\tLoss: 133.677307\n",
+      "Train Epoch: 93 [80/200000 (0%)]\tLoss: 289.909027\n"
      ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_299614/1570191594.py\u001b[0m in \u001b[0;36mfull_training_loop\u001b[0;34m(model, criterion, optimizer, train_loader, test_loader, epochs, print_loss_every_batches, validate_every_epochs, optimizer_step_every_batches, per_epoch_use_max_train_batches, per_epoch_use_max_test_batches, image_path, save_model_every_epochs, model_path, best_model_path)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         train_loss = train_epoch(epoch, criterion, model, optimizer, train_loader,\n\u001b[0m\u001b[1;32m     10\u001b[0m                                  \u001b[0mprint_loss_every_batches\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprint_loss_every_batches\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                                 \u001b[0moptimizer_step_every_batches\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptimizer_step_every_batches\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_299614/1125420861.py\u001b[0m in \u001b[0;36mtrain_epoch\u001b[0;34m(epoch, criterion, model, optimizer, dataloader, print_loss_every_batches, optimizer_step_every_batches, per_epoch_use_max_batches)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#.item() is very important here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m         \u001b[0;31m# In order to avoid having total_loss as a tensor in the gpu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;31m#t = time()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1646,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
