--- a/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Live_Tests.ipynb
+++ b/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Live_Tests.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84056b53",
    "metadata": {},
    "source": [
     "# Live Tests and Routines for Conical Refraction Characterization"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "23451b0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe9c2c7",
    "metadata": {},
    "source": [
     "Both for the 3D profile and linear profile computations you can choose the input image here"
@@ -35,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4dc1f7b9",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a9d7193",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +86,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc26d897",
    "metadata": {},
    "source": [
     "## Get 3D profile"
@@ -100,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b9cd4b6e",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e248ac0b",
    "metadata": {},
    "source": [
     "## Know the $w_0$ coeff"
@@ -1160,7 +1152,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6bb9cc90",
    "metadata": {
     "scrolled": false
    },
@@ -1449,7 +1440,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e904a8bf",
    "metadata": {
     "scrolled": true
    },
@@ -1656,7 +1646,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "75c14277",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1672,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3cb6a80",
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1692,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c144eb92",
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2744,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b06c204e",
    "metadata": {},
    "source": [
     "## Run Angle Determination"
@@ -2766,7 +2752,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "48963ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3230,7 +3215,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b2f2470e",
    "metadata": {
     "scrolled": true
    },
@@ -3569,7 +3553,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "983431b1",
    "metadata": {
     "scrolled": true
    },
@@ -3668,7 +3651,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5da349b1",
    "metadata": {
     "scrolled": true
    },
@@ -3767,7 +3749,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3781,7 +3763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
