--- a/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Empirical_Law_Estimator.ipynb
+++ b/LAB/DEEP_LEARNING/Brute_Force_Simulation_Fitting/NOTEBOOK_Empirical_Law_Estimator.ipynb
@@ -6456,7 +6456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6470,7 +6470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
