Lots of new algorithms added to the pipeline

--- a/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder.ipynb
+++ b/LAB/DEEP_LEARNING/Simple_Encoder/NOTEBOOK_Simple_Encoder.ipynb
@@ -1022,7 +1022,54 @@
       "Train Epoch: 134 [300/500000 (0%)]\tLoss: 1.720668\n",
       "Train Epoch: 135 [100/500000 (0%)]\tLoss: 1.690281\n",
       "Train Epoch: 135 [200/500000 (0%)]\tLoss: 0.871353\n",
-      "Train Epoch: 135 [300/500000 (0%)]\tLoss: 1.651197\n"
+      "Train Epoch: 135 [300/500000 (0%)]\tLoss: 1.651197\n",
+      "Train Epoch: 136 [100/500000 (0%)]\tLoss: 1.422686\n",
+      "Train Epoch: 136 [200/500000 (0%)]\tLoss: 3.257535\n",
+      "Train Epoch: 136 [300/500000 (0%)]\tLoss: 2.173511\n",
+      "Train Epoch: 137 [100/500000 (0%)]\tLoss: 3.072109\n",
+      "Train Epoch: 137 [200/500000 (0%)]\tLoss: 1.939862\n",
+      "Train Epoch: 137 [300/500000 (0%)]\tLoss: 1.452126\n",
+      "Train Epoch: 138 [100/500000 (0%)]\tLoss: 2.397304\n",
+      "Train Epoch: 138 [200/500000 (0%)]\tLoss: 1.455850\n",
+      "Train Epoch: 138 [300/500000 (0%)]\tLoss: 2.057488\n",
+      "Train Epoch: 139 [100/500000 (0%)]\tLoss: 3.217763\n",
+      "Train Epoch: 139 [200/500000 (0%)]\tLoss: 1.715775\n",
+      "Train Epoch: 139 [300/500000 (0%)]\tLoss: 2.592772\n",
+      "Train Epoch: 140 [100/500000 (0%)]\tLoss: 0.187828\n",
+      "Train Epoch: 140 [200/500000 (0%)]\tLoss: 2.653262\n",
+      "Train Epoch: 140 [300/500000 (0%)]\tLoss: 1.049163\n",
+      "Train Epoch: 141 [100/500000 (0%)]\tLoss: 2.068292\n",
+      "Train Epoch: 141 [200/500000 (0%)]\tLoss: 2.860663\n",
+      "Train Epoch: 141 [300/500000 (0%)]\tLoss: 1.984910\n",
+      "Train Epoch: 142 [100/500000 (0%)]\tLoss: 0.572640\n",
+      "Train Epoch: 142 [200/500000 (0%)]\tLoss: 1.930993\n",
+      "Train Epoch: 142 [300/500000 (0%)]\tLoss: 2.060711\n",
+      "Train Epoch: 143 [100/500000 (0%)]\tLoss: 2.361271\n",
+      "Train Epoch: 143 [200/500000 (0%)]\tLoss: 1.777300\n",
+      "Train Epoch: 143 [300/500000 (0%)]\tLoss: 0.883896\n",
+      "Train Epoch: 144 [100/500000 (0%)]\tLoss: 2.897938\n",
+      "Train Epoch: 144 [200/500000 (0%)]\tLoss: 1.548333\n",
+      "Train Epoch: 144 [300/500000 (0%)]\tLoss: 0.723544\n",
+      "Train Epoch: 145 [100/500000 (0%)]\tLoss: 2.554904\n",
+      "Train Epoch: 145 [200/500000 (0%)]\tLoss: 2.033179\n",
+      "Train Epoch: 145 [300/500000 (0%)]\tLoss: 1.261581\n",
+      "Train Epoch: 146 [100/500000 (0%)]\tLoss: 1.358027\n",
+      "Train Epoch: 146 [200/500000 (0%)]\tLoss: 3.899340\n",
+      "Train Epoch: 146 [300/500000 (0%)]\tLoss: 1.355563\n",
+      "Train Epoch: 147 [100/500000 (0%)]\tLoss: 1.821634\n",
+      "Train Epoch: 147 [200/500000 (0%)]\tLoss: 3.735613\n",
+      "Train Epoch: 147 [300/500000 (0%)]\tLoss: 2.222789\n",
+      "Train Epoch: 148 [100/500000 (0%)]\tLoss: 0.994650\n",
+      "Train Epoch: 148 [200/500000 (0%)]\tLoss: 2.095792\n",
+      "Train Epoch: 148 [300/500000 (0%)]\tLoss: 1.397609\n",
+      "Train Epoch: 149 [100/500000 (0%)]\tLoss: 1.276170\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process Process-747:\n"
      ]
     }
    ],
